--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <a class="nav__link nav__link--contact" href="tel:+380961111111">
               <svg class="icon--smartphone">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11</a
-            >
+              >+38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -67,7 +67,7 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="list grid">
-            <li class="grid__item--advantage">
+            <li class="grid__item--advantage advantage__item">
               <div class="advantage__card">
                 <svg class="icon--advantage">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -78,7 +78,7 @@
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="grid__item--advantage">
+            <li class="grid__item--advantage advantage__item">
               <div class="advantage__card">
                 <svg class="icon--advantage">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -89,7 +89,7 @@
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="grid__item--advantage">
+            <li class="grid__item--advantage advantage__item">
               <div class="advantage__card">
                 <svg class="icon--advantage">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -100,7 +100,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="grid__item--advantage">
+            <li class="grid__item--advantage advantage__item">
               <div class="advantage__card">
                 <svg class="icon--advantage">
                   <use href="./images/icons.svg#icon-astronaut"></use>
