--- a/index.html
+++ b/index.html
@@ -169,11 +169,21 @@
           <ul class="list grid">
             <li class="team__item grid__item--team">
               <img
-                class="img"
-                src="./images/igor.jpg"
+                class="img team-photo"
+                srcset="
+                  ./images/team-photo/igor_270.jpg 270w,
+                  ./images/team-photo/igor_345.jpg 345w,
+                  ./images/team-photo/igor_450.jpg 450w,
+                  ./images/team-photo/igor_540.jpg 540w,
+                  ./images/team-photo/igor_708.jpg 708w,
+                  ./images/team-photo/igor_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw"
+                src="./images/team-photo/igor_450.jpg"
                 alt="Ігор Дем'яненко"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
+                loading="lazy"
               />
               <div class="team__container">
                 <h3 class="team__member">Ігор Дем'яненко</h3>
@@ -232,11 +242,21 @@
             </li>
             <li class="team__item grid__item--team">
               <img
-                class="img"
-                src="./images/olha.jpg"
+                class="img team-photo"
+                srcset="
+                  ./images/team-photo/olha_270.jpg 270w,
+                  ./images/team-photo/olha_345.jpg 345w,
+                  ./images/team-photo/olha_450.jpg 450w,
+                  ./images/team-photo/olha_540.jpg 540w,
+                  ./images/team-photo/olha_708.jpg 708w,
+                  ./images/team-photo/olha_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw"
+                src="./images/team-photo/olha_450.jpg"
                 alt="Ольга Рєпіна"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
+                loading="lazy"
               />
               <div class="team__container">
                 <h3 class="team__member">Ольга Рєпіна</h3>
@@ -296,10 +316,20 @@
             <li class="team__item grid__item--team">
               <img
                 class="img team-photo"
-                src="./images/nikolay.jpg"
+                srcset="
+                  ./images/team-photo/nikolay_270.jpg 270w,
+                  ./images/team-photo/nikolay_345.jpg 345w,
+                  ./images/team-photo/nikolay_450.jpg 450w,
+                  ./images/team-photo/nikolay_540.jpg 540w,
+                  ./images/team-photo/nikolay_708.jpg 708w,
+                  ./images/team-photo/nikolay_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw"
+                src="./images/team-photo/nikolay_450.jpg"
                 alt="Микола Тарасов"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
+                loading="lazy"
               />
               <div class="team__container">
                 <h3 class="team__member">Микола Тарасов</h3>
@@ -358,11 +388,21 @@
             </li>
             <li class="team__item grid__item--team">
               <img
-                class="img"
-                src="./images/mixailo.jpg"
+                class="img team-photo"
+                srcset="
+                  ./images/team-photo/mixail_270.jpg 270w,
+                  ./images/team-photo/mixail_345.jpg 345w,
+                  ./images/team-photo/mixail_450.jpg 450w,
+                  ./images/team-photo/mixail_540.jpg 540w,
+                  ./images/team-photo/mixail_708.jpg 708w,
+                  ./images/team-photo/mixail_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw"
+                src="./images/team-photo/mixail_450.jpg"
                 alt="Михайло Єрмаков"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
+                loading="lazy"
               />
               <div class="team__container">
                 <h3 class="team__member">Михайло Єрмаков</h3>
