--- a/index.html
+++ b/index.html
@@ -529,12 +529,12 @@
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="item-address">
+              <li class="address__item">
                 <a class="address__link address__link--contact" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="item-address">
+              <li class="address__item">
                 <a class="address__link address__link--contact" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
