--- a/index.html
+++ b/index.html
@@ -23,17 +23,9 @@
   <body>
     <header class="header">
       <div class="container header__container">
-        <a class="logo logo--header" href="./index.html"
-          ><span class="logo__accent">Web</span>Studio</a
-        >
-
-        <div class="menu-container js-menu-container" id="mobile-menu">
-          <nav class="nav">
-            <button class="button--close-menu menu-toggle js-close-menu" type="button">
-              <svg class="icon--close">
-                <use href="./images/icons.svg#icon-close"></use>
-              </svg>
-            </button>
+       <nav class="nav">
+<a class="logo logo--header" href="./index.html"
+          ><span class="logo__accent">Web</span>Studio</a>
             <ul class="list nav__list">
               <li class="nav__item">
                 <a class="nav__link nav__link--active" href="./index.html">Студія</a>
@@ -63,50 +55,7 @@
               </a>
             </li>
           </ul>
-          <ul class="list menu--social">
-            <li class="menu__item--social">
-              <a
-                href="https://www.instagram.com"
-                class="menu__link"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Instagram
-              </a>
-            </li>
-            <li class="menu__item--social">
-              <a
-                href="https://twitter.com"
-                class="menu__link"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Twitter
-              </a>
-            </li>
-            <li class="menu__item--social">
-              <a
-                href="https://www.facebook.com"
-                class="menu__link"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Facebook
-              </a>
-            </li>
-            <li class="menu__item--social">
-              <a
-                href="https://ua.linkedin.com"
-                class="menu__link"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Linkedin
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+               </div>
       <button
         class="button--menu menu-toggle js-open-menu"
         type="button"
