header + mobile menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
           </nav>
           <ul class="list nav__list nav__list--contact">
-            <li class="nav__item">
+            <li class="nav__item nav__item--contact">
               <a class="nav__link nav__link--contact" href="mailto:info@devstudio.com">
                 <svg class="icon--envelope">
                   <use href="./images/icons.svg#icon-envelope"></use>
@@ -43,9 +43,9 @@
                 info@devstudio.com</a
               >
             </li>
-            <li class="nav__item">
+            <li class="nav__item nav__item--contact">
               <a
-                class="nav__link nav__link--contact nav__link--contact-tel"
+                class="nav__link nav__link--contact"
                 href="tel:+380961111111"
               >
                 <svg class="icon--smartphone">
@@ -739,18 +739,12 @@
       <ul class="list menu__list menu__list--contact">
         <li class="menu__item">
           <a class="menu__link menu__link--contact" href="mailto:info@devstudio.com">
-            <svg class="icon--envelope">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>
-            info@devstudio.com</a
+                       info@devstudio.com</a
           >
         </li>
         <li class="menu__item">
           <a class="menu__link menu__link--contact menu__link--contact-tel" href="tel:+380961111111">
-            <svg class="icon--smartphone">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>
-            +38 096 111 11 11
+                        +38 096 111 11 11
           </a>
         </li>
       </ul>
