--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
+        <div class="footer__container--box">
         <div class="footer__container--address">
           <a class="logo logo--footer" href="./index.html"
             ><span class="logo__accent">Web</span>Studio</a
@@ -608,7 +609,7 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div></div>
         <div class="footer__container--form">
           <p class="footer__container--title">Підпишіться на розсилку</p>
           <form class="form-ftr">
