--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
               <div class="work__card">
                 <img
                   class="img"
-                  src="./images/image1.jpg"
+                  srcset="./images/work/img-1@1x.jpg 1x, ./images/work/img-1@2x.jpg 2x"
+                  src="./images/work/img-1@1x.jpg"
                   alt="розробка сайту"
                   width="370"
                   height="294"
@@ -149,7 +150,8 @@
               <div class="work__card">
                 <img
                   class="img"
-                  src="./images/image2.jpg"
+                  srcset="./images/work/img-2@1x.jpg 1x, ./images/work/img-2@2x.jpg 2x"
+                  src="./images/work/img-2@1x.jpg"
                   alt="розробка мобільного додатку"
                   width="370"
                   height="294"
@@ -163,7 +165,8 @@
               <div class="work__card">
                 <img
                   class="img"
-                  src="./images/image3.jpg"
+                  srcset="./images/work/img-3@1x.jpg 1x, ./images/work/img-3@2x.jpg 2x"
+                  src="./images/work/img-3@1x.jpg"
                   alt="розробка дизайну"
                   width="370"
                   height="294"
