--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
     <!-- mobile menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="button--close-menu menu-toggle js-close-menu" type="button">
-          <svg class="icon--close">
+          <svg class="icon--close-menu">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
